Fixed jumping county dropdown menu

--- a/d3Graphics/ArticleDashboard/birthTrends.css
+++ b/d3Graphics/ArticleDashboard/birthTrends.css
@@ -160,6 +160,7 @@ p.headline-small {
   color: #7D93CA;
   background-color: white;
   border: none;
+  cursor: pointer;
 }
 
 #dropdown-c.hiddendd {
